# stardive-api

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  cox
.github/workflows/: release-cli.yml
crates/stardive/: Cargo.toml  README.md
crates/stardive-api/: Cargo.toml
crates/stardive-api/src/: app_state.rs  auth.rs  command_runner.rs  config.rs  error.rs  file_store.rs  logging.rs  main.rs
crates/stardive-api/src/modules/: files.rs  health.rs  lostandfound.rs  mod.rs  orbit.rs  render.rs  search.rs  static_assets.rs
crates/stardive-core/: Cargo.toml  README.md
crates/stardive-core/src/: client.rs  config.rs  types.rs
crates/stardive/src/: gui.rs  main.rs
docs/pkgx/: README.md
eternal/: design-guidelines.md  git-commit-conventions.md
hooks/: post-restore  pre-backup
installers/: install-cargo-bin.sh  install-stardive-cli.sh  install-stardive.ps1  install-stardive.sh
scripts/: deploy-stardive-server.sh  release-crates.sh
