[workspace]
members = [
  "crates/stardive-core",
  "crates/stardive-api",
  "crates/stardive",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Noah"]
repository = "https://github.com/nmb4/stardive-api"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "json", "macros"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
dunce = "1"
eframe = "0.32"
egui = "0.32"
futures = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
