[package]
name = "stardive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared contracts, config, and HTTP client for Stardive API tooling"
readme = "README.md"
homepage = "https://github.com/nmb4/stardive-api"
documentation = "https://docs.rs/stardive-core"
keywords = ["stardive", "api", "sdk"]
categories = ["api-bindings", "config"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
