[package]
name = "stardive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Companion CLI for the Stardive API"
readme = "README.md"
homepage = "https://github.com/nmb4/stardive-api"
documentation = "https://docs.rs/stardive"
keywords = ["stardive", "cli", "api", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stardive-core = { version = "0.1.0", path = "../stardive-core" }
tokio.workspace = true

[dev-dependencies]
clap.workspace = true
